--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+    "web": "expo start --web -c",
     "eject": "expo eject",
     "test": "jest --watchAll"
   },
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.0",
@@ -25,13 +26,18 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-screens": "^2.17.0",
+    "react-native-web": "~0.13.12",
+    "react-native-web-refresh-control": "^1.0.3",
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "11.0.0",
+    "react-native-youtube-iframe": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
